--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,69 @@
-<!-- 
 <div class="search">
   <form #form="ngForm" (submit)="onSubmit()">
-      <input type="text" placeholder="Search city" name="city" [(ngmodel)]="cityName">
+    <input
+      type="text"
+      placeholder="Search City"
+      name="city"
+      [(ngModel)]="cityName"
+    />
   </form>
-</div> -->
-<div class="container">
+</div>
+
+<div class="container" *ngIf="weatherData">
+  <div class="upper-data">
+    <img src="../assets/hot.jpg" *ngIf="weatherData.main.temp > 15" />
+    <img src="../assets/cold.jpg" *ngIf="weatherData.main.temp <= 15" />
+
+    <div class="weather-data">
+      <div class="location">{{ weatherData.name }}</div>
+      <div class="temperature">
+        {{ weatherData.main.temp | number: "1.0-0" }}°C
+      </div>
+    </div>
+  </div>
+
+  <div class="lower-data">
+    <div class="more-info-label">More Information</div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/icon-cold.png" />
+          <span>min</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherData.main.temp_min | number: "1.0-0" }}°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/icon-cold.png" />
+          <span>max</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherData.main.temp_max | number: "1.0-0" }}°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/icon-cold.png" />
+          <span>humidity</span>
+        </div>
+        <div class="info-block-value">{{ weatherData.main.humidity }}%</div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/icon-cold.png" />
+          <span>wind</span>
+        </div>
+        <div class="info-block-value">{{ weatherData.wind.speed }} km/h</div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="container">
   <div class="upper-data">
     <img src="../assets/cold.jpg" />
     <img src="../assets/hot.png" />
@@ -51,4 +110,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
